;;;; -*- coding: utf-8; -*-
changes in sbcl-1.0.3 relative to sbcl-1.0.2:
  * optimization: calls of the form (AREF FOO (+ INDEX <constant>)) now
    produce more efficient code on the x86 if the compiler can determine
    that (+ INDEX <constant>) does not require a bounds check and FOO
    has an element type at least 8 bits wide.

changes in sbcl-1.0.2 relative to sbcl-1.0.1:
  * improvement: experimental support for mach exception handling on
    x86/macos. requires building with :MACH-EXCEPTION-HANDLER feature
    to use.
  * improvement: support for GBK external format.
    (thanks to Chun Tian (binghe))
  * improvement: the debugger now displays variables that have been closed
    over, in code compiled with (DEBUG 2) or higher
  * improvement: support for executable cores on NetBSD (thanks to 
    Richard Kreuter)
  * new feature: added a RESTART-FRAME debugger command
  * new feature: new generic function SB-GRAY:STREAM-FILE-POSITION can 
    be used to provide an implementation for FILE-POSITION on Gray streams
    (thanks to Eric Marsden)
  * new feature: add syslog, openlog and closelog support to SB-POSIX 
    (thanks to Richard Kreuter)
  * optimization: the function call overhead in code compiled with 
    a high DEBUG optimization setting is significantly 
  * bug fix: an error is signaled for attempts to use READ-SEQUENCE
    for a (SIGNED-BYTE 8) stream and (UNSIGNED-BYTE 8) vector, or vice versa.
    (thanks to Tony Martinez)
  * bug fix: the initforms for DEFMETHOD &AUX parameters are only
    evaluated once (reported by Kevin Reid)
  * bug fix: the :SHOW-PROGRESS keyword parameter to SB-SPROF:WITH-PROFILING
    works again (thanks to Kilian Sprotte)
  * bug fix: an error is signaled for tagbodies with duplicate tags 
    (thanks to Stephen Wilson)
  * bug fix: NIL can be used as a tagbody tag (thanks to Stephen Wilson)
  * bug fix: Win32 port can now handle foreign code unwinding Lisp
    stack frames from alien callbacks.