@@ -4,3 +4,5 @@ stack-alignment-offset
 test-status.lisp-expr
 run-program-ed-test.tmp
 threads-foreign.c
+read-sequence.data
+write-sequence.data
