@@ -1,5 +1,6 @@
 ;;;; -*- coding: utf-8; -*-
 changes in sbcl-1.0.3 relative to sbcl-1.0.2:
+  * new platform: NetBSD/PPC.  (thanks to Aymeric Vincent)
   * optimization: calls of the form (AREF FOO (+ INDEX <constant>)) now
     produce more efficient code on the x86 if the compiler can determine
     that (+ INDEX <constant>) does not require a bounds check and FOO
